# dbt_ragster

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  workspace.yaml
dbt_project/: .gitignore
dbt_project/macros/: round_average.sql
dbt_project/models/marts/: _marts__models.yml  avg_post_score.sql  avg_post_upvote_ratio.sql  avg_score_post_comments.sql  avg_score_post_comments_incremental.sql  post_author_commenter.sql
dbt_project/models/staging/: _dbt_project__models.yml  _dbt_project__sources.yml  stg_comment__data.sql  stg_post__data.sql
dbt_ragster/: assets.py  definitions.py
dbt_ragster/assets/dbt/: dbt_asset.py
dbt_ragster/assets/reddit/: constant.py  db_conn.py  extractor.py  reddit_extraction.py  text_processor.py
dbt_ragster/assets/torch_model/: dataset.py  db_conn.py  pipeline.py
docker/: Dockerfile  dagster.yaml  init_db_schema.sql
